--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <div class="cabecalho">
-	<div class="container-fluid">	
+	<div class="container">	
 		
 			<div class="row">	
 				<button class="cadastrar botao">CADASTRE-SE</button>
