--- a/index.html
+++ b/index.html
@@ -101,6 +101,13 @@
 			</div>
 		</div>
 	</div>
+	<footer>
+		<div class="redes-sociais">
+			<a href="#" class="facebook"></a>
+			<a href="#" class="instagram"></a>
+			<a href="#" class="twiter"></a>
+		</div>
+	</footer>
 
 	
 	<script src="js/jquery.js"></script>
