--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 		<div class="row">
 			<div class="ajuda">
 				<div class="col-sm-6 col-xs-12 text-center" id="quero-ajudar">
+					<button></button>
 					<a href="#"><div><span>QUERO AJUDAR</span></div>
 					</a>
 				</div>
@@ -91,6 +92,15 @@
 			</div>
 		</div>
 	</div>
+	<div class="container">
+		<div class="row text-center">
+			<p>aaaa</p>
+			<p>ssss</p>
+		</div>
+	</div>
+
+
+
 	
 	<footer class="text-center">
 		<div class="container">
