--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		<div class="row">
 			<div class="ajuda">
 				<div class="col-sm-6 col-xs-12 text-center" id="quero-ajudar">
-					<button></button>
+				
 					<a href="#"><div><span>QUERO AJUDAR</span></div>
 					</a>
 				</div>
@@ -91,13 +91,60 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="container">
-		<div class="row text-center">
-			<p>aaaa</p>
-			<p>ssss</p>
+		<div class="row">
+			<div class="linha azul">
+				<span>BEMKIFAZ</span>
+				<p>Abrace essa ideia você também</p>
+			</div>
+		</div>
+		<div class="row abrace-ideia">
+			<div class="col-md-6 col-xs-12">
+				<img src="img/funcionarios.png" class="img-responsive" alt="#"></div>
+			<div class="col-md-6 col-xs-12">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean odio nibh, lobortis sit amet malesuada in, porttitor id mi. Curabitur lacinia feugiat est. Nulla vel tincidunt arcu. Nunc sed ipsum efficitur, volutpat ipsum at, mattis felis. Mauris feugiat molestie ex ac lobortis. Mauris a velit nisl. Aliquam erat volutpat. Suspendisse placerat faucibus pretium. Etiam suscipit augue in feugiat congue. Quisque id aliquet erat, vitae feugiat mauris. Duis blandit lectus urna. Curabitur in magna volutpat, dictum magna sit amet, pellentesque mi. Suspendisse augue eros, viverra a urna varius, ultrices gravida felis. Nam pellentesque arcu nec est porttitor, ut placerat ante interdum.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12 text-center">
+				<button class="button-center saiba-mais">SAIBA MAIS</button>
+			</div>
 		</div>
 	</div>
+
+
+
+	<div class="container-fluid bg-verde">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="linha branca">
+						<span>COMO FUNCIONA</span>
+						<p>Venha apreender você tambem como funciona.</p>
+					</div>
+				</div>
+			</div>
+			<div class="row imagens">
+				<div class="col-md-4 col-xs-12 text-center">
+					<img src="img/mundo.png">
+					<h3>Escolha quem vc quer ajudar</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nulla nulla, consectetur eu cursus ac, dictum at urna. Proin condimentum vehicula ligula eget convallis. Etiam viverra, risus at tincidunt semper, lectus leo lobortis quam, a maximus ipsum nisl id urna.</p>
+				</div>
+				<div class="col-md-4 col-xs-12 text-center">
+					
+					<img src="img/objeto.png">
+					<h3>Escolha quem vc quer ajudar</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nulla nulla, consectetur eu cursus ac, dictum at urna. Proin condimentum vehicula ligula eget convallis. Etiam viverra, risus at tincidunt semper, lectus leo lobortis quam, a maximus ipsum nisl id urna.</p>
+				</div>
+				<div class="col-md-4 col-xs-12 text-center">
+					<img src="img/coracao.png">
+					<h3>Escolha quem vc quer ajudar</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nulla nulla, consectetur eu cursus ac, dictum at urna. Proin condimentum vehicula ligula eget convallis. Etiam viverra, risus at tincidunt semper, lectus leo lobortis quam, a maximus ipsum nisl id urna.</p>
+				</div>
+
+			</div>
+		</div>
+	</div>
+	
 
 
 
