--- a/index.html
+++ b/index.html
@@ -92,9 +92,11 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="linha azul">
-				<span>BEMKIFAZ</span>
-				<p>Abrace essa ideia você também</p>
+			<div class="col-md-12">
+				<div class="linha azul">
+					<span>BEMKIFAZ</span>
+					<p>Abrace essa ideia você também</p>
+				</div>
 			</div>
 		</div>
 		<div class="row abrace-ideia">
@@ -106,7 +108,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12 text-center">
-				<button class="button-center saiba-mais">SAIBA MAIS</button>
+				<button class="button-center bt-saiba-mais">SAIBA MAIS</button>
 			</div>
 		</div>
 	</div>
@@ -125,30 +127,70 @@
 			</div>
 			<div class="row imagens">
 				<div class="col-md-4 col-xs-12 text-center">
-					<img src="img/mundo.png">
-					<h3>Escolha quem vc quer ajudar</h3>
+					<div class="fundo-transparente">
+						<img src="img/mundo.png">
+					</div>
+					<h4>Escolha quem vc quer ajudar</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nulla nulla, consectetur eu cursus ac, dictum at urna. Proin condimentum vehicula ligula eget convallis. Etiam viverra, risus at tincidunt semper, lectus leo lobortis quam, a maximus ipsum nisl id urna.</p>
 				</div>
 				<div class="col-md-4 col-xs-12 text-center">
-					
-					<img src="img/objeto.png">
-					<h3>Escolha quem vc quer ajudar</h3>
+					<div class="fundo-transparente">
+						<img src="img/objeto.png">
+					</div>
+					<h4>Escolha quem vc quer ajudar</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nulla nulla, consectetur eu cursus ac, dictum at urna. Proin condimentum vehicula ligula eget convallis. Etiam viverra, risus at tincidunt semper, lectus leo lobortis quam, a maximus ipsum nisl id urna.</p>
 				</div>
 				<div class="col-md-4 col-xs-12 text-center">
-					<img src="img/coracao.png">
-					<h3>Escolha quem vc quer ajudar</h3>
+					<div class="fundo-transparente">
+						<img src="img/coracao.png">
+					</div>
+					<h4>Escolha quem vc quer ajudar</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nulla nulla, consectetur eu cursus ac, dictum at urna. Proin condimentum vehicula ligula eget convallis. Etiam viverra, risus at tincidunt semper, lectus leo lobortis quam, a maximus ipsum nisl id urna.</p>
+				</div>
+				<div class="col-md-12">
+					<div class="col-md-12 text-center">
+						<button class="button-center bt-quero-ajudar">QUERO AJUDAR</button>
+					</div>
 				</div>
 
 			</div>
 		</div>
 	</div>
 	
-
-
-
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<div class="linha linha2 azul">
+					<span>DEPOIMENTOS</span>
+					<p>Abrace essa ideia você também</p>
+				</div>
+			</div>
+		</div>
 	
+		<div class="row">
+			<div class="col-md-12">
+				<div class="comentario text-center">					
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget odio in mi placerat elementum vitae eu elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse maximus justo varius rhoncus placerat. Suspendisse velit sem, lobortis ut elementum nec, molestie a purus. Nullam tempus, sem non condimentum maximus, nunc massa suscipit purus, non mollis massa erat maximus lacus. Phasellus tincidunt vestibulum euismod. Donec libero urna, fringilla ut fermentum ut, feugiat vitae lectus. Donec nulla velit, feugiat vel quam ac, sodales faucibus leo. Suspendisse mi nulla, egestas lacinia pulvinar ultricies, efficitur eget urna. Nunc vel diam congue, sagittis nibh id, vehicula ante. Phasellus at tempor erat, quis aliquam erat.</p>
+					<span class="azul h4">CLÁUDIO SOARES - FRANCA/SP</span>
+				</div>
+			</div>
+			<div class="col-md-12">
+				<div class="numero-comentario">
+					<ul>
+						<li class="comentario-ativo"><a href="#">1</a></li>
+						<li><a href="#">2</a></li>
+						<li><a href="#">3</a></li>
+						<li><a href="#">4</a></li>					
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12 text-center">
+				<button class="button-center bt-saiba-mais">VER TODOS</button>
+			</div>
+		</div>
+	</div>
 	<footer class="text-center">
 		<div class="container">
 			<div class="row">
