--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</div>
 		
 		<div class="row">
-			<div class="logo col-md-4 "> 
+			<div class="logo col-md-4 ">
 				<a href="#"> <img src="img/logo.png" alt="logo Bemkifaz" class="img-responsive"></a>
 			</div>
 			<div class="navegacao col-md-8" >
@@ -128,14 +128,14 @@
 			<div class="row imagens">
 				<div class="col-md-4 col-xs-12 text-center">
 					<div class="fundo-transparente">
-						<img src="img/mundo.png">
+						<img src="img/mundo.png" >
 					</div>
 					<h4>Escolha quem vc quer ajudar</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nulla nulla, consectetur eu cursus ac, dictum at urna. Proin condimentum vehicula ligula eget convallis. Etiam viverra, risus at tincidunt semper, lectus leo lobortis quam, a maximus ipsum nisl id urna.</p>
 				</div>
 				<div class="col-md-4 col-xs-12 text-center">
-					<div class="fundo-transparente">
-						<img src="img/objeto.png">
+					<div class="fundo-transparente img-objeto">
+						<img src="img/objeto.png" >
 					</div>
 					<h4>Escolha quem vc quer ajudar</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nulla nulla, consectetur eu cursus ac, dictum at urna. Proin condimentum vehicula ligula eget convallis. Etiam viverra, risus at tincidunt semper, lectus leo lobortis quam, a maximus ipsum nisl id urna.</p>
