--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/login.css" rel="stylesheet">
 	<link type="text/css" href="css/style.css" rel="stylesheet">
+	<link type="text/css" href="css/painel.css" rel="stylesheet">
 	
 	
 </head>
@@ -51,10 +52,11 @@
 		</div>
 	</div>
 	<div class="container">
-		<div class="row">
-			<div class="col-md-2 col-xs-12">
+		<div class="row conteudo">
+			<div class="col-md-2 col-xs-12 painel-usuario">
 				<aside>	
-					<a href="index.html">Home</a> | Login
+					<p><a href="index.html">Home</a> | Login</p>
+					<span>Login</span>
 				</aside>
 			</div>
 			<div class="col-md-10 col-xs-12">
@@ -63,31 +65,26 @@
 					  <div class="form-group">
 					    <label for="senha">Email</label>
 					    <div>
-					      <input type="email" id="senha" placeholder="Email">
+					      <input type="email" id="senha">
 					    </div>
 					  </div>
+					  <a href="#" class="esqueci-senha">Esqueci minha senha</a>
 					  <div class="form-group">
 					    <label for="inputPassword3">Senha</label>
 					    <div>
-
-					      <input type="password" id="inputPassword3" placeholder="Password">
+					      <input type="password" id="inputPassword3">
 					    </div>
 					  </div>
-					  <div class="form-group">
-					    <div >
-					      <div class="checkbox">
-					        <label>
-					          <input type="checkbox"> Me lembre
-					        </label>
-					      </div>
-					    </div>
-					  </div>
+					  
 					  <div class="form-group">
 					    <div>
-					      <button type="submit" class="btn btn-default">Sign in</button>
+					      <button type="submit" class="pull-right">Entrar</button>
 					    </div>
 					  </div>
 					</form>
+					<div class="click-cadastrar">
+						<p>Ainda não possui cadastro? Clique <a href="#">aqui</a> e cadastre-se</p>
+					</div>
 				</div>
 			</div>
 
