--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 		</div>
 		
 		<div class="row">
-			<div class="logo col-md-4 ">
+			<div class="logo col-sm-3 ">
 				<a href="#"> <img src="img/logo.png" alt="logo Bemkifaz" class="img-responsive"></a>
 			</div>
-			<div class="navegacao col-md-8" >
+			<div class="navegacao col-sm-9" >
 				<nav class="navbar navbar-default  menu">
 		            <div class="container-fluid container-menu">
 		                <div class="navbar-header">
